--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,9 @@
 		       <div class="obj_left" style="width:600px">
 		          <p>{$promote_book->description}</p>
 		          <p>{$promote_book->short_description}</p>
-		          <p><a href="cart_action.php?action=ADD&id={$promote_book->id}">{_('Add To Shopping Cart')}</a></p>
+		          {if isset($smarty.session['logged']) && $smarty.session['logged'] }
+		              <p><a href="cart_action.php?action=ADD&id={$promote_book->id}">{_('Add To Shopping Cart')}</a></p>
+		          {/if}
 		       </div>
 	       </div>
 	   </div>
@@ -28,7 +30,9 @@
 					<a href="book.php?id={$b->id}"><img width="120" height="120" src="{$b->cover|default:'../public/images/no_cover.jpg'}"/></a>
 				</div>
 				<a href="book.php?id={$b->id}">{$b->name}</a>
-				<p><a href="cart_action.php?action=ADD&id={$b->id}">{_('Add To Shopping Cart')}</a></p>
+				{if isset($smarty.session['logged']) && $smarty.session['logged'] }
+				    <p><a href="cart_action.php?action=ADD&id={$b->id}">{_('Add To Shopping Cart')}</a></p>
+				{/if}
 			</div>
 		{/foreach}
 	</div>
@@ -46,7 +50,9 @@
 	                    <a href="book.php?id={$b->id}"><img width="120" height="120" src="{$b->cover|default:'../public/images/no_cover.jpg'}"/></a>
 	                </div>
 	                <a href="book.php?id={$b->id}">{$b->name}</a>
-	                <p><a href="cart_action.php?action=ADD&id={$b->id}">{_('Add To Shopping Cart')}</a></p>
+	                {if isset($smarty.session['logged']) && $smarty.session['logged'] }
+	                   <p><a href="cart_action.php?action=ADD&id={$b->id}">{_('Add To Shopping Cart')}</a></p>
+	                {/if}
 	            </div>
 	        {/foreach}
 	    </div>
