--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -13,6 +13,7 @@
 	
 	<link rel="stylesheet" href="../public/css/menu_style.css" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="../public/css/screen.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/{$smarty.session['locale']}.css" />
 
 	{block name="extCSS"}{/block}
 
