--- a/templates/register.html
+++ b/templates/register.html
@@ -23,20 +23,23 @@
 
 {block name="main_content"}
 	<form action="save_register.php" method="post">
-		<div>
-			<p><label>{_('E-mail')}</label><input type="text" name="email" id="email"/></p>
-			<p><label>{_('Password')}</label><input type="password" name="password" id="password"/></p>
-			<p><label>{_('Confirmed Password')}</label><input type="password" name="repassword" id="repassword"/></p>
-		</div>
-		<div>
-			<input type="button" value="{_('Submit')}" onclick="submit_form()"/>
-		</div>
-		
-		
-		
-	   
-		
-		<div class="fb-registration" data-fields="[{ 'name':'name' }, { 'name':'email' }]"  data-redirect-uri="http://bookshare.sys2do.com"></div>
-		
+        <table>
+            <tr>
+                <td><label>{_('E-mail')}</label></td>
+                <td><input type="text" name="email" id="email"/></td>
+            </tr>
+            <tr>
+                <td><label>{_('Password')}</label></td>
+                <td><input type="password" name="password" id="password"/></td>
+            </tr>
+            <tr>
+                <td><label>{_('Confirmed Password')}</label></td>
+                <td><input type="password" name="repassword" id="repassword"/></td>
+            </tr>
+            <tr>
+                <td>&nbsp;</td>
+                <td><input type="button" value="{_('Submit')}" onclick="submit_form()"/></td>
+            </tr>
+        </table>	   
 	</form>
 {/block}
