add the google login funciton

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,4 +18,12 @@
 		    </tr>
 		</table>
 	</form>
+	
+	
+	<ul>
+	   <li><a href="login_via_3party.php?v=GOOGLE">Login via Google</a></li>
+	   <li><a href="login_via_3party.php?v=FACEBOOK">Login via Facebook</a></li>
+	   <li><a href="login_via_3party.php?v=YAHOO">Login via Yahoo</a></li>
+	   <li><a href="login_via_3party.php?v=QQ">Login via QQ</a></li>
+	</ul>
 {/block}
