add the qq login function

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,6 @@
 	   <li><a href="login_via_3party.php?v=GOOGLE">Login via Google</a></li>
 	   <li><a href="login_via_3party.php?v=FACEBOOK">Login via Facebook</a></li>
 	   <li><a href="login_via_3party.php?v=YAHOO">Login via Yahoo</a></li>
-	   <li><a href="login_via_3party.php?v=QQ">Login via QQ</a></li>
+	   <li><a href="login_via_3party.php?v=QQ"><img src='../public/images/Connect_logo_3.png'/></a></li>
 	</ul>
 {/block}
