--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <head>
 	{config_load file="site.conf"}
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<!-- for qq oauth -->
+	<meta property="qc:admins" content="201530677733012563132476375" />
 	<title>{$title|default:$smarty.config.website_title}</title>
 	<link rel="stylesheet" type="text/css" href="../public/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="../public/css/grid960.css" />
@@ -41,9 +43,9 @@
 	{block name="header"}
 		<div class="full height_100" id="header">
 			<div>Banner here</div>
-			<p class="obj_right">
+			<div class="obj_right">
 			{if isset($smarty.session['logged']) && $smarty.session['logged'] }
-				{_('welcome')} , {$smarty.session.user->email} | <a href="cart.php">{_('Shopping Cart')}</a> | <a href="logout_handler.php">{_('Logout')}</a>
+				<a href="profile.php"><img width="30" height="30" src="{$smarty.session.user->pic|default:'../public/images/somebody.png'}"/></a> | <a href="cart.php">{_('Shopping Cart')}</a> | <a href="logout_handler.php">{_('Logout')}</a>
 			{else}
 				<a href="login.php">{_('Login')}</a> | <a href="register.php">{_('Register')} </a> | <a href="cart.php">{_('Shopping Cart')}</a>
 	            {*insert name='facebook_login'*}				
@@ -58,7 +60,7 @@
 					{/if}
 				{/foreach}
 			</select>
-			</p>
+			</div>
 		</div>
 
 			
