hidden the shopping car function

--- a/templates/book.html
+++ b/templates/book.html
@@ -26,7 +26,8 @@
 		<p><a href="download_xml.php?id={encode($book->id)}">XML</a></p>
 		<p><a href="book.php?id={encode($book->id)}&action=EDIT">{_('Edit')}</a></p>
     {/if}
-		<p><a href="#" onclick="add2cart('{encode($book->id)}')">{_('Add To Shopping Cart')}</a></p>
+		
+		<!-- <p><a href="#" onclick="add2cart('{encode($book->id)}')">{_('Add To Shopping Cart')}</a></p>  -->
     
     {if isset($smarty.session['locale']) && $smarty.session['locale'] == 'zh_CN'}
 		<div id="uyan_frame"></div>
