check verion and update version function

--- a/templates/book.html
+++ b/templates/book.html
@@ -20,15 +20,16 @@
 	
 	<p>{_('Short Description')} : {$book->short_description}</p>
     
+    <p><a href="download.php?id={encode($book->id)}">{_('Download')}</a></p>
     
     {if isset($smarty.session['logged'])}
-		<p><a href="download.php?id={encode($book->id)}">{_('Download')}</a></p>
-		<p><a href="download_xml.php?id={encode($book->id)}">XML</a></p>
+		<!-- <p><a href="download.php?id={encode($book->id)}">{_('Download')}</a></p> -->
+		<!-- <p><a href="download_xml.php?id={encode($book->id)}">XML</a></p>  -->
 		<p><a href="book.php?id={encode($book->id)}&action=EDIT">{_('Edit')}</a></p>
     {/if}
 		
 		<!-- <p><a href="#" onclick="add2cart('{encode($book->id)}')">{_('Add To Shopping Cart')}</a></p>  -->
-    
+        
     {if isset($smarty.session['locale']) && $smarty.session['locale'] == 'zh_CN'}
 		<div id="uyan_frame"></div>
 		<script type="text/javascript" id="UYScript" src="http://v1.uyan.cc/js/iframe.js?UYUserId=89706" async=""></script>
