--- a/templates/books.html
+++ b/templates/books.html
@@ -10,7 +10,8 @@
 					<a href="book.php?id={encode($b->id)}"><img width="120" height="120" src="{$b->cover|default:'../public/images/no_cover.jpg'}"/></a>
 				</div>
 				<a href="book.php?id={encode($b->id)}">{$b->name}</a>
-			    <p><a href="#" onclick="add2cart('{encode($b->id)}')">{_('Add To Shopping Cart')}</a></p>
+			    <!-- <p><a href="#" onclick="add2cart('{encode($b->id)}')">{_('Add To Shopping Cart')}</a></p>  -->
+			    <p><a href="download.php?id={encode($b->id)}">{_('Download')}</a></p>
 			</div>
 		{/foreach}
 	</div>
