add the verion field to the books table

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 	{config_load file="site.conf"}
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta property="qc:admins" content="201530607214510062773314603" />
 	<title>{$title|default:$smarty.config.website_title}</title>
 	<link rel="stylesheet" type="text/css" href="../public/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="../public/css/grid960.css" />
