--- a/templates/base.html
+++ b/templates/base.html
@@ -57,10 +57,9 @@
 			<div>Banner here</div>
 			<div class="obj_right">
 			{if isset($smarty.session['logged']) && $smarty.session['logged'] }
-				<a href="profile.php"><img width="30" height="30" src="{$smarty.session.user->pic|default:'../public/images/somebody.png'}"/></a> <!-- | <a href="cart.php">{_('Shopping Cart')}</a>  -->| <a href="logout_handler.php">{_('Logout')}</a>
+				<a href="profile.php"><img width="30" height="30" src="{$smarty.session.user->pic|default:'../public/images/somebody.png'}"/></a> <!-- | <a href="cart.php">{_('Shopping Cart')}</a>  -->| <a href="/logout_handler.php">{_('Logout')}</a>
 			{else}
-				<a href="login.php">{_('Login')}</a> | <a href="register.php">{_('Register')} </a> <!-- | <a href="cart.php">{_('Shopping Cart')}</a> -->
-	            {*insert name='facebook_login'*}				
+				<a href="login.php">{_('Login')}</a> | <a href="register.php">{_('Register')} </a> <!-- | <a href="cart.php">{_('Shopping Cart')}</a> -->			
 			{/if}
 			|
 			<select onchange="switch_language(this)">
