--- a/templates/book_edit.html
+++ b/templates/book_edit.html
@@ -15,30 +15,58 @@
 		                
 
 {block name="main_content"}
+    <div class="obj_left" style="width : 250px; height: 250px; text-align: center;">
+        <img width="200" height="200" src="{$book->cover|default:'../public/images/no_cover.jpg'}"/>
+    </div>
+
+    <div class="obj_left" style="width:600px">
 	<form action="save_book.php" method="post" enctype="multipart/form-data">
 		<input type="hidden" name="id" value="{encode($book->id)}"/>
 		<input type="hidden" name="file_ids" id="file_ids" value="{$book->pages}"/>
 		<input type="hidden" name="action" value="EDIT"/>
-		<div>
-			<p><label>{_('Book Name')}</label><input type="text" name="name" value="{$book->name}"/></p>
-			<p><label>{_('Category')}</label>
-				{foreach from=$all_categories item=c}
-				    {if array_search($c->id,$select_ids) > -1}
-				        <input type="checkbox" value="{$c->id}" name="categories[]" checked="checked" id="cid_{$c->id}"/>
-				    {else}
-				        <input type="checkbox" value="{$c->id}" name="categories[]" id="cid_{$c->id}"/>
-				    {/if}
-					<label for="cid_{$c->id}">{$c->name}</label>
-				{/foreach}
-			</p>
-			<p><label>{_('Description')}</label><textarea name="description">{$book->description}</textarea></p>
-			<p><label>{_('Short Description')}</label><textarea name="short_description">{$book->short_description}</textarea></p>
-			<p><label>{_('File')}</label><input id="fileupload" type="file" name="files[]" multiple></p>
-		</div>
-		<div>
-			<input type="submit" value="{_('Submit')}"/>
-		</div>
 		
+		<table>
+		  <tr>
+		      <td><label>{_('Book Name')}</label></td>
+		      <td><input type="text" name="name" value="{$book->name}"/></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Category')}</label></td>
+		      <td>
+		          {foreach from=$all_categories item=c}
+                    {if array_search($c->id,$select_ids) > -1}
+                        <input type="checkbox" value="{$c->id}" name="categories[]" checked="checked" id="cid_{$c->id}"/>
+                    {else}
+                        <input type="checkbox" value="{$c->id}" name="categories[]" id="cid_{$c->id}"/>
+                    {/if}
+                    <label for="cid_{$c->id}">{$c->name}</label>
+                {/foreach}
+		      </td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Description')}</label></td>
+		      <td><textarea name="description">{$book->description}</textarea></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Short Description')}</label></td>
+		      <td><textarea name="short_description">{$book->short_description}</textarea></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Cover')}</label></td>
+		      <td><input id="cover" type="file" name="cover"></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Pages')}</label></td>
+		      <td><input id="fileupload" type="file" name="files[]" multiple></td>
+		  </tr>
+		  <tr>
+		      <td colspan="2"><p style="text-align:right;"><input type="submit" value="{_('Submit')}"/></p></td>
+		  </tr>
+		</table>
+
+        <br />
+        <br />
+        		
 		<table id="files_list">
 			<tr>
 				<td width="200">{_('Book Name')}</td><td width="200">{_('File Size')}</td><td width="100">{_('Delete')}</td>
@@ -50,6 +78,6 @@
 			{/foreach}
 		</table>
 	</form>
-	
+	</div>
 		
 {/block}
