--- a/templates/upload.html
+++ b/templates/upload.html
@@ -35,30 +35,59 @@
 		                
 
 {block name="main_content"}
+    <div class="obj_left" style="width : 250px; height: 250px; text-align: center;">
+        <img width="200" height="200" src="/public/images/no_cover.jpg"/>
+    </div>
+    
+    <div class="obj_left" style="width:600px">
 	<form action="save_book.php" method="post" enctype="multipart/form-data">
 		<input type="hidden" name="file_ids" id="file_ids" value=""/>
 		<input type="hidden" name="action" value="NEW"/>
-		<div>
-			<p><label>{_('Book Name')}</label><input type="text" name="name" id="name"/></p>
-			<p><label>{_('Category')}</label>
-				{foreach from=$categories item=c}
-					<input type="checkbox" value="{$c->id}" name="categories[]" id="cid_{$c->id}"/> <label for="cid_{$c->id}">{$c->name}</label>
-				{/foreach}
-			</p>
-			<p><label>{_('Description')}</label><textarea name="description" id="description"></textarea></p>
-			<p><label>{_('Short Description')}</label><textarea name="short_description"></textarea></p>
-			<p><label>Files</label><input id="fileupload" type="file" name="files[]" multiple></p>
-		</div>
-		<div>
-			<input type="button" value="{_('Submit')}" onclick="toSave()"/>
-		</div>
+		
+		
+		<table>
+		  <tr>
+		      <td><label>{_('Book Name')}</label></td>
+		      <td><input type="text" name="name" id="name"/></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Category')}</label></td>
+		      <td>
+		          {foreach from=$categories item=c}
+                    <input type="checkbox" value="{$c->id}" name="categories[]" id="cid_{$c->id}"/> <label for="cid_{$c->id}">{$c->name}</label>
+                  {/foreach}
+              </td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Description')}</label></td>
+		      <td><textarea name="description" id="description"></textarea></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Short Description')}</label></td>
+		      <td><textarea name="short_description"></textarea></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Cover')}</label></td>
+		      <td><input id="cover" type="file" name="cover"></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Pages')}</label></td>
+		      <td><input id="fileupload" type="file" name="files[]" multiple></td>
+		  </tr>
+		  <tr>
+		      <td colspan="2"><p style="text-align:right;"><input type="button" value="{_('Submit')}" onclick="toSave()"/></p></td>
+		  </tr>
+		</table>
+		
 		<br />
+		<br />
+		
 		<table id="files_list">
 			<tr>
 				<td width="200">{_('File Name')}</td><td width="200">{_('File Size')}</td><td width="100">{_('Delete')}</td>
 			</tr>
 		</table>
 	</form>
-	
+	</div>
 		
 {/block}
