--- a/templates/upload.html
+++ b/templates/upload.html
@@ -61,12 +61,16 @@
               </td>
 		  </tr>
 		  <tr>
-		      <td><label>{_('Description')}</label></td>
-		      <td><textarea name="description" id="description"></textarea></td>
-		  </tr>
+              <td><label>{_('Author')}</label></td>
+              <td><input type="text" name="author" id="author"/></td>
+          </tr>
 		  <tr>
 		      <td><label>{_('Short Description')}</label></td>
 		      <td><textarea name="short_description"></textarea></td>
+		  </tr>
+		  <tr>
+		      <td><label>{_('Description')}</label></td>
+		      <td><textarea name="description" id="description"></textarea></td>
 		  </tr>
 		  <tr>
 		      <td><label>{_('Cover')}</label></td>
