--- a/templates/register.html
+++ b/templates/register.html
@@ -19,6 +19,7 @@
     	   
     	   if(msg.length>0){
     		   alert(msg.join("\n"));
+    		   return;
     	   }else{
     		   $("form").submit();
     	   }
