--- a/templates/admin/category.html
+++ b/templates/admin/category.html
@@ -17,6 +17,19 @@
     				  });
     	  }
       }
+      
+      function move(id,type){
+    	  $.getJSON('category.php',
+                  { 'q' : 'MOVE', 'id' : id,'type' : type, 'd' : Date.parse(new Date()) },
+                  function(r){
+                      if(r.flag==1){
+                          alert('Error !');
+                      }else{
+                          alert('Action successfully!');
+                          window.location.reload(true);
+                      }
+                  });
+      }
 //]]>
 </script>
 {/block}
@@ -26,15 +39,18 @@
 	<table class="plain" width="100%">
 		<thead>
 			<tr>
+				<td>{_('Index')}</td>
 				<td>{_('Category Name')}</td>
 				<td>{_('Create Time')}</td>
 				<td>{_('Create User')}</td>
 				<td>{_('Show On Homepage')}</td>
+				<td>{_('Action')}</td>
 			</tr>
 		</thead>
 		<tbody>
-			{foreach from=$categories item=b}
+			{foreach from=$categories item=b name=tmp}
 				<tr>
+					<td>{$smarty.foreach.tmp.iteration}</td>
 					<td>{$b->name} (<a href="category.php?q=EDIT&id={$b->id}">Edit</a>,<a href="#" onclick="delete_record({$b->id})">Delete</a>)</td>
 					<td>{$b->create_time}</td>
 					<td>{$b->create_by}</td>
@@ -45,6 +61,7 @@
 					       YES
 					   {/if}
 					</td>
+					<td><input type="button" value="{_('Up')}" onclick="move({$b->id},'UP')"/>&nbsp;<input type="button" value="{_('Down')}" onclick="move({$b->id},'DOWN')"/></td>
 				</tr>
 			{/foreach}
 		</tbody>
